target/generated-sources/antlr4/GramaticaParser.py
# Generated from Gramatica.g4 by ANTLR 4.5.1
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO



class GramaticaParser ( Parser ):

    grammarFileName = "Gramatica.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'print'", u"'('", u"')'", u"';'", u"'{'", 
                     u"'}'", u"'=>'", u"','", u"'='", u"'['", u"']'", u"':'", 
                     u"'++'", u"'=='", u"'**'", u"'*'", u"'/'", u"'%'", 
                     u"'+'", u"'-'", u"'<<'", u"'>>'", u"'&'", u"'|'", u"'^'", 
                     u"'...'", u"'<'", u"'>'", u"'>='", u"'<='", u"'<>'", 
                     u"'!='", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"'match'", u"'case'", 
                     u"'generate'", u"'partition'", u"'filter'", u"'::'", 
                     u"'@'", u"'->'", u"'+='", u"'-='", u"'*='", u"'@='", 
                     u"'/='", u"'%='", u"'&='", u"'|='", u"'^='", u"'<<='", 
                     u"'>>='", u"'**='", u"'//='", u"'def'", u"'return'", 
                     u"'raise'", u"'from'", u"'import'", u"'as'", u"'global'", 
                     u"'nonlocal'", u"'assert'", u"'if'", u"'elif'", u"'else'", 
                     u"'while'", u"'for'", u"'in'", u"'try'", u"'finally'", 
                     u"'with'", u"'except'", u"'lambda'", u"'or'", u"'and'", 
                     u"'not'", u"'is'", u"'None'", u"'True'", u"'False'", 
                     u"'class'", u"'yield'", u"'del'", u"'pass'", u"'continue'", 
                     u"'break'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"DECIMAL_INTEGER", u"OCT_INTEGER", 
                      u"HEX_INTEGER", u"BIN_INTEGER", u"FLOAT_NUMBER", u"IMAG_NUMBER", 
                      u"STRING", u"STRING_LITERAL", u"BYTES_LITERAL", u"MATCH", 
                      u"CASE", u"GENERATE", u"PARTITION", u"FILTER", u"CONCAT", 
                      u"AT", u"ARROW", u"ADD_ASSIGN", u"SUB_ASSIGN", u"MULT_ASSIGN", 
                      u"AT_ASSIGN", u"DIV_ASSIGN", u"MOD_ASSIGN", u"AND_ASSIGN", 
                      u"OR_ASSIGN", u"XOR_ASSIGN", u"LEFT_SHIFT_ASSIGN", 
                      u"RIGHT_SHIFT_ASSIGN", u"POWER_ASSIGN", u"IDIV_ASSIGN", 
                      u"DEF", u"RETURN", u"RAISE", u"FROM", u"IMPORT", u"AS", 
                      u"GLOBAL", u"NONLOCAL", u"ASSERT", u"IF", u"ELIF", 
                      u"ELSE", u"WHILE", u"FOR", u"IN", u"TRY", u"FINALLY", 
                      u"WITH", u"EXCEPT", u"LAMBDA", u"OR", u"AND", u"NOT", 
                      u"IS", u"NONE", u"TRUE", u"FALSE", u"CLASS", u"YIELD", 
                      u"DEL", u"PASS", u"CONTINUE", u"BREAK", u"NAME", u"SKIP", 
                      u"UNKNOWN_CHAR", u"INDENT", u"DEDENT" ]

    RULE_matchFun = 0
    RULE_single_input = 1
    RULE_stmt = 2
    RULE_print_fun = 3
    RULE_import_stmt = 4
    RULE_import_name = 5
    RULE_import_from = 6
    RULE_funcdef = 7
    RULE_funcBody = 8
    RULE_match_stmt = 9
    RULE_lambdaParamet = 10
    RULE_args = 11
    RULE_sub_args = 12
    RULE_func_call = 13
    RULE_parameters = 14
    RULE_sub_parameters = 15
    RULE_if_stmt = 16
    RULE_elif_stmt = 17
    RULE_else_stmt = 18
    RULE_while_stmt = 19
    RULE_return_stmt = 20
    RULE_assig_stmt = 21
    RULE_for_stmt = 22
    RULE_flow_stmt = 23
    RULE_break_stmt = 24
    RULE_continue_stmt = 25
    RULE_try_stmt = 26
    RULE_del_stmt = 27
    RULE_except_clause = 28
    RULE_lambda_testset = 29
    RULE_lambda_subset = 30
    RULE_lambda_test = 31
    RULE_iterable = 32
    RULE_list_element = 33
    RULE_sublist_element = 34
    RULE_map_element = 35
    RULE_submap_element = 36
    RULE_test = 37
    RULE_expr = 38
    RULE_atom = 39
    RULE_number = 40
    RULE_comp_op = 41
    RULE_integer = 42

    ruleNames =  [ u"matchFun", u"single_input", u"stmt", u"print_fun", 
                   u"import_stmt", u"import_name", u"import_from", u"funcdef", 
                   u"funcBody", u"match_stmt", u"lambdaParamet", u"args", 
                   u"sub_args", u"func_call", u"parameters", u"sub_parameters", 
                   u"if_stmt", u"elif_stmt", u"else_stmt", u"while_stmt", 
                   u"return_stmt", u"assig_stmt", u"for_stmt", u"flow_stmt", 
                   u"break_stmt", u"continue_stmt", u"try_stmt", u"del_stmt", 
                   u"except_clause", u"lambda_testset", u"lambda_subset", 
                   u"lambda_test", u"iterable", u"list_element", u"sublist_element", 
                   u"map_element", u"submap_element", u"test", u"expr", 
                   u"atom", u"number", u"comp_op", u"integer" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    DECIMAL_INTEGER=33
    OCT_INTEGER=34
    HEX_INTEGER=35
    BIN_INTEGER=36
    FLOAT_NUMBER=37
    IMAG_NUMBER=38
    STRING=39
    STRING_LITERAL=40
    BYTES_LITERAL=41
    MATCH=42
    CASE=43
    GENERATE=44
    PARTITION=45
    FILTER=46
    CONCAT=47
    AT=48
    ARROW=49
    ADD_ASSIGN=50
    SUB_ASSIGN=51
    MULT_ASSIGN=52
    AT_ASSIGN=53
    DIV_ASSIGN=54
    MOD_ASSIGN=55
    AND_ASSIGN=56
    OR_ASSIGN=57
    XOR_ASSIGN=58
    LEFT_SHIFT_ASSIGN=59
    RIGHT_SHIFT_ASSIGN=60
    POWER_ASSIGN=61
    IDIV_ASSIGN=62
    DEF=63
    RETURN=64
    RAISE=65
    FROM=66
    IMPORT=67
    AS=68
    GLOBAL=69
    NONLOCAL=70
    ASSERT=71
    IF=72
    ELIF=73
    ELSE=74
    WHILE=75
    FOR=76
    IN=77
    TRY=78
    FINALLY=79
    WITH=80
    EXCEPT=81
    LAMBDA=82
    OR=83
    AND=84
    NOT=85
    IS=86
    NONE=87
    TRUE=88
    FALSE=89
    CLASS=90
    YIELD=91
    DEL=92
    PASS=93
    CONTINUE=94
    BREAK=95
    NAME=96
    SKIP=97
    UNKNOWN_CHAR=98
    INDENT=99
    DEDENT=100

    def __init__(self, input):
        super(GramaticaParser, self).__init__(input)
        self.checkVersion("4.5.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class MatchFunContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(GramaticaParser.MatchFunContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GramaticaParser.RULE_matchFun

        def enterRule(self, listener):
            if hasattr(listener, "enterMatchFun"):
                listener.enterMatchFun(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitMatchFun"):
                listener.exitMatchFun(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitMatchFun"):
                return visitor.visitMatchFun(self)
            else:
                return visitor.visitChildren(self)




    def matchFun(self):

        localctx = GramaticaParser.MatchFunContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_matchFun)
        try:
            self.enterOuterAlt(localctx, 1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Single_inputContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(GramaticaParser.Single_inputContext, self).__init__(parent, invokingState)
            self.parser = parser

        def import_stmt(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(GramaticaParser.Import_stmtContext)
            else:
                return self.getTypedRuleContext(GramaticaParser.Import_stmtContext,i)


        def stmt(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(GramaticaParser.StmtContext)
            else:
                return self.getTypedRuleContext(GramaticaParser.StmtContext,i)


        def getRuleIndex(self):
            return GramaticaParser.RULE_single_input

        def enterRule(self, listener):
            if hasattr(listener, "enterSingle_input"):
                listener.enterSingle_input(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitSingle_input"):
                listener.exitSingle_input(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitSingle_input"):
                return visitor.visitSingle_input(self)
            else:
                return visitor.visitChildren(self)




    def single_input(self):

        localctx = GramaticaParser.Single_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_single_input)
        self._la = 0 # Token type
        try:
            self.state = 101
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==GramaticaParser.FROM or _la==GramaticaParser.IMPORT:
                    self.state = 89
                    self.import_stmt()
                    self.state = 94
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
